--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "material-ui": "^1.0.0-beta.34",
     "moment": "^2.20.1",
     "react": "^16.2.0",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
