added offset to request handler flights call and installed react paginate

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.2.0",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^16.2.0",
+    "react-paginate": "^5.1.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
